desafio aula 06 finalizado

--- a/aula06/index.html
+++ b/aula06/index.html
@@ -30,7 +30,9 @@
     
     </tbody>
   </table>
-  
+  <section class="informacoes">
+    <p data-status>Aguardando pontuação</p>
+  </section>
   
   <script src="main.js"></script>
 </body>
